Fix arrows overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -645,7 +645,7 @@ section.testimonials {
     align-items: center;
     justify-content: center;
     gap: 16px;
-    margin-top: 18px;
+    margin: 18px;
     width: 100%;
 }
 
